@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-18T16:16:45Z",
-  "count_outdated" : 267,
-  "uniques_outdated" : 133,
-  "count" : 308,
-  "uniques" : 160,
+  "timestamp" : "2022-05-19T01:07:50Z",
+  "count_outdated" : 269,
+  "uniques_outdated" : 135,
+  "count" : 310,
+  "uniques" : 161,
   "clones" : [
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 1,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
