@@ -1,12 +1,7 @@
 {
   "count": 41,
-  "uniques": 14,
+  "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 1,
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
