@@ -1,3 +1,10 @@
+2022-05-19T01:07:50Z:
+* notice: last 14d: unq all: 13 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 133 267 / 160 308
+* notice: next accum: outdated-unq outdated-all / unq all: 135 269 / 161 310
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: changed dates: [2022-05-18]
+
 2022-05-18T16:16:45Z:
 * notice: last 14d: unq all: 14 41
 * notice: prev accum: outdated-unq outdated-all / unq all: 133 267 / 160 308
